--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.application.name = email-service
+server.servlet.context-path= /email-service
+server.port=8082
 
+#DATABASE
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/emails
+spring.datasource.username=postgres
+spring.datasource.password=111111
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
+spring.jpa.database=POSTGRESQL
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
