Create possibility for sending mails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.datasource.initialization-mode=always
 spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+#MAIL_SENDER
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=java.task.service
+spring.mail.password=Zaq12wsx!@#
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
